Fixed arrow clipping

--- a/main.css
+++ b/main.css
@@ -630,6 +630,7 @@ height: 500px;
 	width: 30px;
 	height: 30px;
 	background-image: url("arrow.svg");
+	background-repeat: no-repeat;
 }
 
 #arrow3 {
